swap pq for pgx, upd config

--- a/.env.toml.example
+++ b/.env.toml.example
@@ -1,2 +1,9 @@
 # file expected in /etc/goluca/.env.toml
-GOLUCA_DBCONNSTRING="root:root@127.0.0.1:3306/goluca"
+ENVTYPE="DEV"
+DBHOST="127.0.0.1"
+DBPORT="5432"
+DBUSER="user"
+DBPASS="password"
+DBDB="goluca"
+APIHOST="localhost"
+APIPORT="3333"
