update db to longform explicit database

--- a/.env.toml.example
+++ b/.env.toml.example
@@ -4,6 +4,6 @@ DBHOST="127.0.0.1"
 DBPORT="5432"
 DBUSER="user"
 DBPASS="password"
-DBDB="goluca"
+DBDATABASE="goluca"
 APIHOST="localhost"
 APIPORT="3333"
