scaffolding for test environment
add scope for social unit testing and integration testing

stable account POST controller integration test

test fixes

replace assert with is

update readme todo

update coverage and ci testing

more test cov upd

add cleanup to github action

check containers

update go test profile name

update cover profile out name for goveralls

--- a/.env.toml.example
+++ b/.env.toml.example
@@ -1,9 +1,14 @@
 # file expected in /etc/goluca/.env.toml
-ENVTYPE="DEV"
-DBHOST="127.0.0.1"
-DBPORT="5432"
-DBUSER="user"
-DBPASS="password"
-DBDATABASE="goluca"
-APIHOST="localhost"
-APIPORT="3333"
+[environment]
+TYPE="LOCAL"
+
+[database]
+HOST="127.0.0.1"
+PORT="5432"
+USER="user"
+PASS="password"
+DATABASE="goluca"
+
+[httpapi]
+HOST="localhost"
+PORT="3333"
