--- a/test/data/configloader/partial.env.toml
+++ b/test/data/configloader/partial.env.toml
@@ -1,4 +1,7 @@
 # file expected in /etc/goluca/.env.toml
-ENVTYPE="DEV"
-APIHOST="localhost"
-APIPORT="3333"
+[environment]
+TYPE="DEV"
+
+[httpapi]
+HOST="localhost"
+PORT="3333"
