--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,5 +1,9 @@
 name: coverage
-on: [push]
+on: 
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
 
   test:
@@ -10,15 +14,18 @@ jobs:
     steps:
       - uses: actions/setup-go@v1
         with:
-          go-version: 1.15
+          go-version: 1.17
       - uses: actions/checkout@v2
-      - run: go test -v -coverprofile=profile.cov ./...
+      - run: make up
+      - run: docker container ls -a
+      - run: make test
+      - run: make down
 
       - name: Send coverage
         uses: shogo82148/actions-goveralls@v1
         with:
-          path-to-profile: profile.cov
-          flag-name: Go-1.15
+          path-to-profile: cover.out
+          flag-name: Go-1.17
           parallel: true
 
   # notifies that all test jobs are finished.
