--- a/api/entries.yml
+++ b/api/entries.yml
@@ -45,7 +45,7 @@ components:
           $ref: 'shared.yml#/components/schemas/uuid'
         description:
           type: string
-        debirAccount:
+        debitAccount:
           $ref: 'shared.yml#/components/schemas/uuid'
         creditAccount:
           $ref: 'shared.yml#/components/schemas/uuid'
