upd http api spec to be more accurate

--- a/http/v0/spec/accounts.yml
+++ b/http/v0/spec/accounts.yml
@@ -98,6 +98,12 @@ components:
                 $ref: '#/components/schemas/type'
               basis:
                 $ref: '#/components/schemas/basis'
+            required:
+              - "name"
+              - "type"
+              - "basis"
+        required:
+          - "account"
 
   responses:
     getAccount:
