--- a/http/v0/spec/entries.yml
+++ b/http/v0/spec/entries.yml
@@ -36,6 +36,9 @@ components:
           type: string
           maxLength: 3
           minLength: 3
+      required:
+        - "value"
+        - "currency"
     entry:
       type: object
       properties:
