--- a/http/v0/spec/transactions.yml
+++ b/http/v0/spec/transactions.yml
@@ -77,18 +77,26 @@ components:
           $ref: 'shared.yml#/components/schemas/uuid'
         amount:
           $ref: 'entries.yml#/components/schemas/amount'
+      required:
+        - "debitAccount"
+        - "creditAccount"
+        - "amount"
     requestTransaction:
       type: object
       properties:
-        description:
-          type: string
-        entries:
-          type: array
-          minLength: 1
-          items:
-            $ref: '#/components/schemas/requestEntry'
-        createdAt:
-          $ref: 'shared.yml#/components/schemas/time'
+        transaction:
+          type: object
+          properties:
+            description:
+              type: string
+            entries:
+              type: array
+              minLength: 1
+              items:
+                $ref: '#/components/schemas/requestEntry'
+          required:
+            - "description"
+            - "entries"
 
   responses:
     getTransaction:
@@ -107,7 +115,7 @@ components:
           schema:
             type: object
             properties:
-              transaction:
+              transactions:
                 type: array
                 items:
                   $ref: '#/components/schemas/responseTransaction'
