--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: 1.19
       - uses: actions/checkout@v2
-      - run: make up
+      - run: make dbup
       - run: docker container ls -a
       - run: make test
       - run: make down
