--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,14 @@
             "mode": "debug",
             "program": "${workspaceRoot}/cmd/goluca",
             "cwd": "${workspaceRoot}",
+        },
+        {
+            "name": "wiretap",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceRoot}/cmd/wiretap",
+            "cwd": "${workspaceRoot}",
         }
     ]
 }
