run nats dep for testing in ci flow

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,6 +17,7 @@ jobs:
           go-version: 1.19
       - uses: actions/checkout@v2
       - run: make dbup
+      - run: make natsup
       - run: docker container ls -a
       - run: make test
       - run: make down
