big updates to config load + startup; unhappy w/ enable flag

--- a/.env.toml.example
+++ b/.env.toml.example
@@ -10,6 +10,19 @@ PASS="password"
 DATABASE="goluca"
 SSLMODE="disable"
 
-[httpapi]
+[httpserver]
 HOST="localhost"
 PORT="3333"
+
+[grpcserver]
+HOST="localhost"
+PORT="5000"
+
+[nats]
+HOST="localhost"
+PORT="4222"
+
+[nats.wiretap]
+ENABLE="enabled" # generally disabled except for dev/debugging scenarios
+HOST="localhost" # generally the same as [nats]
+PORT="4222"
