use default true for wiretap enable

--- a/.env.toml.example
+++ b/.env.toml.example
@@ -23,6 +23,6 @@ HOST="localhost"
 PORT="4222"
 
 [nats.wiretap]
-ENABLE="enabled" # generally disabled except for dev/debugging scenarios
+ENABLE=true # generally disabled except for dev/debugging scenarios
 HOST="localhost" # generally the same as [nats]
 PORT="4222"
