--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20.4
+          go-version: 1.20.x
+      - run: go version
       - uses: actions/checkout@v3
       - run: make dbup
       - run: make natsup
