--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,10 +12,11 @@ jobs:
       fail-fast: false
 
     steps:
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.19
-      - uses: actions/checkout@v2
+          go-version: 1.20.x
+      - run: go version
+      - uses: actions/checkout@v3
       - run: make dbup
       - run: make natsup
       - run: docker container ls -a
