--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -4,14 +4,13 @@ jobs:
   golangci:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24.x
-      - run: go version
       - uses: actions/checkout@v4
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
+      - uses: cachix/install-nix-actions@v31
         with:
-          version: latest
-          args: --timeout=2m
+          nix_path: nixpkgs=channel:nixos-25.05
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: nix build
+      - run: nix flake check
+      - run: go version
+      - run: make lint
   
