--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -10,6 +10,6 @@ jobs:
           nix_path: nixpkgs=channel:nixos-25.05
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
       - run: nix flake check
-      - run: go version
-      - run: make lint
+      - run: nix develop .#goluca -c go version
+      - run: nix develop .#goluca -c make lint
   
