--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,23 +5,27 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-
   test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-
     steps:
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24.x
-      - run: go version
       - uses: actions/checkout@v4
-      - run: make dbup
-      - run: make natsup
-      - run: docker container ls -a
-      - run: make test
-      - run: make down
+      - uses: cachix/install-nix-action@v31
+        with:
+          nix_path: nixpkgs=channel:nixos-25.05
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Warm nix develop environment
+        run: nix develop .#goluca -c echo "nix develop environment warmed"
+      - name: containers up
+        run: nix develop .#goluca -c make dbup && make natsup && docker container ls -a
+      - name: test
+        shell: nix develop .#goluca --command bash {0}
+        run: |
+          go version
+          make test
+      - name: containers down
+        run: nix develop .#goluca -c make down
 
       - name: Send coverage
         uses: shogo82148/actions-goveralls@v1
